logs/validate.20260321-093811.log
error: expected square brackets
  --> src/Chap41/AVLTreeSetStPer.rs:34:2
   |
34 | #![verifier::loop_isolation(false)]
   |  ^

error[E0425]: cannot find type `AVLTreeSetStPer` in this scope
    --> src/Chap41/AVLTreeSetStPer.rs:1034:44
     |
1034 |     impl<T: StT + Ord> std::fmt::Debug for AVLTreeSetStPer<T> {
     |                                            ^^^^^^^^^^^^^^^
     |
    ::: src/Chap37/AVLTreeSeqStPer.rs:64:5
     |
  64 |     pub struct AVLTreeSeqStPerS<T: StT> {
     |     ----------------------------------- similarly named struct `AVLTreeSeqStPerS` defined here
     |
help: a struct with a similar name exists
     |
1034 -     impl<T: StT + Ord> std::fmt::Debug for AVLTreeSetStPer<T> {
1034 +     impl<T: StT + Ord> std::fmt::Debug for AVLTreeSeqStPerS<T> {
     |

error[E0425]: cannot find type `AVLTreeSetStPer` in this scope
    --> src/Chap41/AVLTreeSetStPer.rs:1047:36
     |
1047 |     impl<T: StT + Ord> Display for AVLTreeSetStPer<T> {
     |                                    ^^^^^^^^^^^^^^^
     |
    ::: src/Chap37/AVLTreeSeqStPer.rs:64:5
     |
  64 |     pub struct AVLTreeSeqStPerS<T: StT> {
     |     ----------------------------------- similarly named struct `AVLTreeSeqStPerS` defined here
     |
help: a struct with a similar name exists
     |
1047 -     impl<T: StT + Ord> Display for AVLTreeSetStPer<T> {
1047 +     impl<T: StT + Ord> Display for AVLTreeSeqStPerS<T> {
     |

error[E0425]: cannot find type `AVLTreeSetStPer` in this scope
  --> src/Chap43/OrderedTableStPer.rs:50:23
   |
50 |         pub base_set: AVLTreeSetStPer<Pair<K, V>>,
   |                       ^^^^^^^^^^^^^^^
   |
  ::: src/Chap37/AVLTreeSeqStPer.rs:64:5
   |
64 |     pub struct AVLTreeSeqStPerS<T: StT> {
   |     ----------------------------------- similarly named struct `AVLTreeSeqStPerS` defined here
   |
help: a struct with a similar name exists
   |
50 -         pub base_set: AVLTreeSetStPer<Pair<K, V>>,
50 +         pub base_set: AVLTreeSeqStPerS<Pair<K, V>>,
   |

error[E0422]: cannot find struct, variant or union type `AVLTreeSetStPer` in this scope
   --> src/Chap43/OrderedTableStPer.rs:925:27
    |
925 |                 base_set: AVLTreeSetStPer { elements: copy_elements },
    |                           ^^^^^^^^^^^^^^^
    |
   ::: src/Chap37/AVLTreeSeqStPer.rs:64:5
    |
 64 |     pub struct AVLTreeSeqStPerS<T: StT> {
    |     ----------------------------------- similarly named struct `AVLTreeSeqStPerS` defined here
    |
help: a struct with a similar name exists
    |
925 -                 base_set: AVLTreeSetStPer { elements: copy_elements },
925 +                 base_set: AVLTreeSeqStPerS { elements: copy_elements },
    |

error[E0425]: cannot find type `AVLTreeSetStPer` in this scope
  --> src/Chap43/OrderedSetStPer.rs:47:23
   |
47 |         pub base_set: AVLTreeSetStPer<T>,
   |                       ^^^^^^^^^^^^^^^
   |
  ::: src/Chap37/AVLTreeSeqStPer.rs:64:5
   |
64 |     pub struct AVLTreeSeqStPerS<T: StT> {
   |     ----------------------------------- similarly named struct `AVLTreeSeqStPerS` defined here
   |
help: a struct with a similar name exists
   |
47 -         pub base_set: AVLTreeSetStPer<T>,
47 +         pub base_set: AVLTreeSeqStPerS<T>,
   |

error[E0425]: cannot find type `AVLTreeSetStPer` in this scope
  --> src/Chap53/PQMinStPer.rs:24:22
   |
24 |         pub visited: AVLTreeSetStPer<V>,
   |                      ^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find type `AVLTreeSetStPer` in this scope
  --> src/Chap53/PQMinStPer.rs:25:25
   |
25 |         pub priorities: AVLTreeSetStPer<Pair<V, P>>,     // (vertex, priority)
   |                         ^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find type `AVLTreeSetStPer` in this scope
  --> src/Chap53/PQMinStPer.rs:26:28
   |
26 |         pub parent: Option<AVLTreeSetStPer<Pair<V, V>>>, // (child, parent)
   |                            ^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find type `AVLTreeSetStPer` in this scope
  --> src/Chap53/PQMinStPer.rs:45:26
   |
45 |    